Bug 195886 - Creating random dynamic playlist option button disapears when window is not tall enough
Summary: Creating random dynamic playlist option button disapears when window is not t...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (show other bugs)
Version: 2.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-10 14:46 UTC by Justin
Modified: 2009-06-11 09:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments
screenshot (212.86 KB, image/png)
2009-06-10 16:13 UTC, Justin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin 2009-06-10 14:46:15 UTC
Version:           2.1 (using 4.2.90 (KDE 4.2.90 (KDE 4.3 Beta2)), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.28-11-generic

Creating random dynamic playlist option is disabled and cannot be enabled.
Comment 1 Myriam Schweingruber 2009-06-10 15:34:32 UTC
This works for me, did you click on the button next to the "On" sign? It should remain ticked. if you did not set any bias, the playlist will be populated automatically, else consider choosing a proportional or fuzzy bias with the buttons below.

Running 2.1-SVn, r979693, Jaunty 9.04, KDE 4.2.90 (aka beta 2)
Comment 2 Justin 2009-06-10 15:45:59 UTC
What "on" button?
Comment 3 Myriam Schweingruber 2009-06-10 16:01:27 UTC
The button located in the "Playlists tab" on the very top. You can check this screenshot for more information:
http://myriam.kollide.net/Dynamic Playlists.png
Comment 4 Justin 2009-06-10 16:13:57 UTC
Created attachment 34405 [details]
screenshot

As you can see in my screenshot, I don't have that box. I didn't receive any errors on the install, so I thought it was a bug.
Comment 5 Myriam Schweingruber 2009-06-11 09:22:05 UTC
Please make your window bigger: this is a layout problem we will try to fix right now, but you window is simply too small to show the button.
Comment 6 Mark Kretschmann 2009-06-11 09:34:00 UTC
SVN commit 980116 by markey:

Don't hide the "On/Off" button for Dynamic Playlists if the window is
not tall enough.

BUG: 195886

 M  +1 -2      DynamicCategory.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=980116