Don't hide the "On/Off" button for Dynamic Playlists if the window is not tall enough.

BUG: 195886

svn path=/trunk/extragear/multimedia/amarok/; revision=980116